# supplier-to-shopify-enrichment

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DATABASE.md  HANDOFF.md  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.codex/: hooks.json
.github/workflows/: ci.yml
apps/web/: AGENTS.md  CLAUDE.md  README.md  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/src/app/: globals.css  (+3 more)
apps/worker/: AGENTS.md  README.md  pyproject.toml
apps/worker/scripts/: seed_batch.py
apps/worker/src/worker/: __init__.py  config.py  db.py  llm.py  media.py  normalize.py  observability.py  poller.py  research.py  web_search.py
apps/worker/src/worker/graph/: __init__.py  builder.py  nodes.py
apps/worker/src/worker/models/: __init__.py  domain.py  fields.py  graph_state.py  settings.py
apps/worker/src/worker/pipeline/: __init__.py  fetch.py  persist.py  preprocess.py
apps/worker/tests/: test_clustering.py  test_graph.py  test_media.py  test_model_contract.py  test_observability.py  test_poller.py  test_research.py  test_smoke.py
data/: products_input.csv  products_input.xlsx  products_multicolor_input.csv
docs/: ARCHITECTURE.md  DATABASE.md  MONOREPO.md  architecture.drawio
docs/ai-work-history/: 2026-06-16-22-28-claude-session-01.md  2026-06-16-23-36-codex-session-01.md  2026-06-16-23-51-claude-session-02.md  2026-06-17-00-08-claude-session-01.md  (+3 more)
evals/: README.md  promptfooconfig.yaml
scripts/: ai-work-history-hook.js  sync-env.sh
supabase/: config.toml  seed.sql
(+51 files in other folders)
