[project]
name = "worker"
version = "0.0.0"
description = "Supplier-to-Shopify enrichment worker (Python + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg[binary]>=3.2.0",
    "supabase>=2.8.0",
    "tavily-python>=0.5.0",
    "langsmith>=0.1.0",
]

[project.scripts]
worker = "worker.poller:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["worker"]
mypy_path = "src"

# Tavily ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = "tavily.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
